# PuffyCalm

./: .env.example  .env.local.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
backend/: Dockerfile  README.md  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_create_users_table.py  d0f5da7772b5_create_catalog_tables.py  e7f8a9b0c1d2_create_orders_and_stripe_events.py  f1a2b3c4d5e6_product_lifecycle_and_purchase_rules.py  j1a2b3c4d5e6_create_content_blocks.py  l1a2b3c4d5e6_add_product_stock_qty.py  p1a2b3c4d5e6_unpublish_smoke_sku_prod_009.py  q1a2b3c4d5e6_add_product_supplier_url.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/application/: __init__.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/domain/: __init__.py  catalog.py  (+2 more)
backend/scripts/: hard_wipe_demo_catalog_orders.py  inject_launch_copy.py  wipe_category_demo_images.py  wipe_demo_storefront.py  wipe_home_demo.py
backend/tests/: conftest.py  test_admin_media_api.py  test_admin_orders_api.py  test_admin_products_api.py  test_auth_api.py  test_catalog_api.py  test_checkout_address.py  test_checkout_api.py  test_checkout_shipping.py  test_content_api.py  test_content_normalize.py  test_customer_orders_api.py  test_google_exchange.py  test_health.py  test_inventory_webhook.py  test_media_validation.py  test_observability.py  test_order_status_transitions.py  test_purchase_limits.py  test_reviews_api.py  test_seed.py
(+333 files in other folders)
